RESOLVED FIXED166990
HTML form validation popover sometimes does not go away
https://bugs.webkit.org/show_bug.cgi?id=166990
Summary HTML form validation popover sometimes does not go away
Chris Dumez
Reported 2017-01-12 15:07:52 PST
HTML form validation popover sometimes does not go away when it should.
Attachments
Patch (35.03 KB, patch)
2017-01-12 15:20 PST, Chris Dumez
no flags
Patch (11.59 KB, patch)
2017-01-12 16:08 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2017-01-12 15:08:16 PST
Radar WebKit Bug Importer
Comment 2 2017-01-12 15:09:13 PST
Chris Dumez
Comment 3 2017-01-12 15:20:58 PST
Chris Dumez
Comment 4 2017-01-12 16:08:54 PST
Chris Dumez
Comment 5 2017-01-12 16:09:48 PST
Sorry, I had 2 patches squashed together. Now it contains only the fix for this bug, sorry about that.
Chris Dumez
Comment 6 2017-01-12 17:00:39 PST
Comment on attachment 298728 [details] Patch Clearing flags on attachment: 298728 Committed r210689: <http://trac.webkit.org/changeset/210689>
Chris Dumez
Comment 7 2017-01-12 17:00:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.